# Projet-INFO-2AS2

./: .gitignore  04_asrs_xgboost_executed.ipynb  04_asrs_xgboost_v2.ipynb  05_expresso_backtest_executed.ipynb  README.md  add_asrs_cells.py  main.py  pyproject.toml
.github/workflows/: asrs_eod.yml  asrs_monitor.yml  asrs_signal.yml
data/: dax_live_5min.csv
models/: asrs_mfe_reg.pkl  asrs_reg.pkl  asrs_xgb_features.pkl  asrs_xgb_filter.pkl  expresso_reg.pkl  karaoke_reg.pkl  regression_features.pkl
notebooks/: 00_collect_dax_live.ipynb  00_collect_dax_live_ct_v.ipynb  00_eda.ipynb  00b_asrs_live.ipynb  00b_descriptive_analysis.ipynb  01_asrs_baseline.ipynb  01_strategies.ipynb  02_asrs_filters.ipynb  02_xgboost.ipynb  03_asrs_context.ipynb  04_asrs_xgboost.ipynb  05_expresso_backtest.ipynb  06_tp_regression.ipynb  07_LightGBM.ipynb  08_compare_live_csv.ipynb  features.py  strategies.ipynb
scripts/: asrs_eod.py  asrs_monitor.py  asrs_signal.py  test_trade_tp.py
src/api/: api.py
src/api/core/: config.py
src/api/routers/: backtest_router.py
src/dao/: candle_dao.py  db_connection.py  price_candle_dao.py  trade_dao.py
src/database/: trading.db
src/dto/: backtest_dto.py  trade_dto.py
src/models/: candle.py  signal.py  trade.py
src/service/: backtest_service.py  candle_service.py
src/service/collector/: api_client.py  (+4 more)
src/utils/: enumeration.py  singleton.py
tests/: conftest.py  test_api_client.py  test_session.py
tests/test_dao/: test_candle.py  test_trade.py
tests/test_service/: test_backtest_service.py  test_db_importer.py  test_parse.py
