[project]
name = "projet-info-2as2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.2",
    "fastapi>=0.135.3",
    "joblib>=1.5.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "metatrader5>=5.0.5735; sys_platform == 'win32'",
    "pandas>=3.0.2",
    "python-dotenv>=1.2.2",
    "pyzmq>=27.1.0",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "uvicorn>=0.44.0",
    "lightgbm>=4.5.0",
    "shap>=0.46.0",
    "xgboost>=3.2.0",
    "yfinance>=1.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
